# Software_Training

doc/ai/promptEngineering/: 00_overview.md
doc/ai/promptEngineering/01_chatGptPromptEngineeringForDevs/: 00_guidelines.md  01_iterative.md  02_summarizing.md  03_inferring.md
doc/algorithms/: 0_problemSolvingProcedure.md
doc/algorithms/techniques/: 0_slidingWindow.md  1_binarySearch.md  1a_binarySearchMultipleDatasets.md  2_twoPointer.md
doc/c++/c++11/: 00_overview.md  01_auto.md  02_range_based_loops.md  03_smart_pointers.md  04_lambda.md  05_move_semantics.md
doc/codingStandards/: README.md
doc/codingStandards/00_general/: comments-and-formatting.md  error-handling-and-testing.md  functions-and-classes.md  naming-conventions.md
doc/codingStandards/00_general/cleanCode/: Chapter1.md  Chapter12.md  Chapter13.md  Chapter15.md  Chapter17.md  Chapter5.md  Chapter7.md  Chapters14_16.md
doc/codingStandards/00_general/error-handling-and-testing/: 00_error-handling-and-testing.md  c.md  cpp.md  rust.md
doc/codingStandards/01_embedded/c/: README.md
doc/codingStandards/01_embedded/rust/: README.md
doc/codingStandards/99_reference-standards/books/cleanCode/: Chapter10.md  Chapter11.md  Chapter14.md  Chapter16.md  Chapter2.md  Chapter3.md  Chapter4.md  Chapter6.md  Chapter8.md  Chapter9.md
doc/codingStandards/embedded/cpp/: README.md
doc/codingStandards/reference-standards/nasa/: TenCommandments.txt
doc/configuration/: fedora_configuration.md
doc/dataStructures/arrays/: 00_overview.md
doc/dataStructures/hashMap/: 00_overview.md
doc/dataStructures/sets/: 00_overview.md
doc/dataStructures/strings/: 00_overview.md
doc/network/arp/: rfc-826.md
doc/softwareRequirements/: 0_srsOverview.md  1_srsStructure.md  2_srsDevelopmentApproach.md
source/algorithms/src/leetCode/problem20/: ValidParentheses.cpp
source/algorithms/src/leetCode/problem242/: ValidAnagram.cpp
source/algorithms/src/leetCode/problem9/: CMakeLists.txt  PalindromNumber.cpp  PalindromNumber.h
source/algorithms/test/leetCode/: CMakeLists.txt
source/cpp11/: CMakeLists.txt
source/cpp11/scripts/: compile.sh  test.sh
source/utilities/python/htmlParser/requirements/: Requirements.md
source/utilities/python/htmlParser/src/: htmlParser.py
source/utilities/python/testDataGenerator/requirements/: Requirements.md
source/utilities/python/testDataGenerator/src/: testDataGenerator.py
